# qa_guru_python_10_18

./: pyproject.toml
